Rough draft of first page completed. Writing's awful, but sim works

--- a/index.html
+++ b/index.html
@@ -3,9 +3,37 @@
 <head>
     <meta charset="utf-8" />
     <title>Optics</title>
+
+    <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+
+    <link rel="stylesheet" type="text/css" media="screen" href="/normalize.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/skeleton.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="/index.css" />
 </head>
 <body>
+    <div class="container">
+        <div class="row">
+            <div class="one-half column" style="margin-top: 10%">
+                <h3>Reflection</h3>
+                <p>When light hits a mirror, it reflects out at the same angle that it hit the mirror at. 
+                    Try moving the light ray to see this --> </p>
+
+                    <blockquote>
+                        <h5>Law of Reflection</h5>
+
+                         The angle with which light hits the mirror (θ
+                        <sub>i</sub>) is the same as the angle it reflects out at (θ
+                        <sub>r</sub>).
+
+                        <br/> 
+                        <br/>
+                        <h6> θ<sub>i</sub> = θ<sub>r</sub></h6>
+
+                    </blockquote>
+            </div>
+            <div id="main" class="one-half column" style="margin-top: 10%;"></div>
+        </div>
+    </div>
 
     <script src="https://d3js.org/d3.v5.min.js"></script>
 
