--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 
     <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="/normalize.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="/skeleton.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="/index.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="normalize.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="skeleton.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
 </head>
 <body>
     <div class="container">
@@ -37,6 +37,6 @@
 
     <script src="https://d3js.org/d3.v5.min.js"></script>
 
-    <script src="/index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
