Updated first sim

--- a/index.html
+++ b/index.html
@@ -30,13 +30,20 @@
                         <h6> θ<sub>i</sub> = θ<sub>r</sub></h6>
 
                     </blockquote>
+                <p>
+                    Next: <ul>
+                        <li>Reflection on a curved surface (dome)</li>
+                        <li>Reflection on concave mirrors (different options)</li>
+                        </ul>
+
+                </p>
             </div>
             <div id="main" class="one-half column" style="margin-top: 10%;"></div>
         </div>
     </div>
 
     <script src="https://d3js.org/d3.v5.min.js"></script>
-
+    <script src="util.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
