--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
                     <blockquote>
                         <h5>Law of Reflection</h5>
 
-                         The angle with which light hits the mirror (θ
-                        <sub>i</sub>) is the same as the angle it reflects out at (θ
-                        <sub>r</sub>).
+                         The angle with which light hits the mirror (θ<sub>i</sub>) 
+                         is the same as the angle it reflects out at (θ<sub>r</sub>).
 
                         <br/> 
                         <br/>
@@ -38,12 +37,22 @@
 
                 </p>
             </div>
-            <div id="main" class="one-half column" style="margin-top: 10%;"></div>
+            <div id="reflection_flat" class="one-half column" style="margin-top: 10%;"></div>
+        </div>
+        <div class="row">
+            <div class="one-half column">
+                <p>
+                    Reflection on a curved surface
+                </p>
+            </div>
+            <div id="reflection_dome" class="one-half column"></div>
         </div>
     </div>
 
     <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="https://d3js.org/d3-selection-multi.v1.min.js"></script>
     <script src="util.js"></script>
-    <script src="index.js"></script>
+    <script src="reflection_flat.js"></script>
+    <script src="reflection_dome.js"></script>
 </body>
 </html>
