--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://d3js.org/d3-selection-multi.v1.min.js"></script>
     <script src="util.js"></script>
+    <script src="geometry.js"></script>
     <script src="reflection_flat.js"></script>
     <script src="reflection_dome.js"></script>
 </body>
