Did a lot of things, including the Arc class Also added space.install

--- a/index.html
+++ b/index.html
@@ -47,13 +47,31 @@
             </div>
             <div id="reflection_dome" class="one-half column"></div>
         </div>
+        <div class="row">
+            <div class="one-half column">
+                <p>
+                    Reflection on a half sphere
+                </p>
+            </div>
+            <div id="reflection_dish" class="one-half column"></div>
+        </div>
+        <div class="row">
+            <div class="one-half column">
+                <p>
+                    Reflection on a half sphere
+                </p>
+            </div>
+            <div id="reflection_circle" class="one-half column"></div>
+        </div>
     </div>
 
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://d3js.org/d3-selection-multi.v1.min.js"></script>
     <script src="util.js"></script>
     <script src="geometry.js"></script>
-    <script src="reflection_flat.js"></script>
+    <!-- <script src="reflection_flat.js"></script> -->
     <script src="reflection_dome.js"></script>
+    <script src="reflection_dish.js"></script>
+    <script src="reflection_circle.js"></script>
 </body>
 </html>
