IT IS FLAWLESS DO NOT QUESTION ME FIND A BUG I DARE YOU

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <title>Optics</title>
@@ -10,30 +11,36 @@
     <link rel="stylesheet" type="text/css" media="screen" href="skeleton.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
 </head>
+
 <body>
     <div class="container">
         <div class="row">
             <div class="one-half column" style="margin-top: 10%">
                 <h3>Reflection</h3>
-                <p>When light hits a mirror, it reflects out at the same angle that it hit the mirror at. 
-                    Try moving the light ray to see this --> </p>
+                <p>When light hits a mirror, it reflects out at the same angle that it hit the mirror at. Try moving the light
+                    ray to see this --> </p>
 
-                    <blockquote>
-                        <h5>Law of Reflection</h5>
+                <blockquote>
+                    <h5>Law of Reflection</h5>
 
-                         The angle with which light hits the mirror (θ<sub>i</sub>) 
-                         is the same as the angle it reflects out at (θ<sub>r</sub>).
+                    The angle with which light hits the mirror (θ
+                    <sub>i</sub>) is the same as the angle it reflects out at (θ
+                    <sub>r</sub>).
 
-                        <br/> 
-                        <br/>
-                        <h6> θ<sub>i</sub> = θ<sub>r</sub></h6>
+                    <br/>
+                    <br/>
+                    <h6> θ
+                        <sub>i</sub> = θ
+                        <sub>r</sub>
+                    </h6>
 
-                    </blockquote>
+                </blockquote>
                 <p>
-                    Next: <ul>
+                    Next:
+                    <ul>
                         <li>Reflection on a curved surface (dome)</li>
                         <li>Reflection on concave mirrors (different options)</li>
-                        </ul>
+                    </ul>
 
                 </p>
             </div>
@@ -58,10 +65,18 @@
         <div class="row">
             <div class="one-half column">
                 <p>
-                    Reflection on a half sphere
+                    Reflection in a circle
                 </p>
             </div>
             <div id="reflection_circle" class="one-half column"></div>
+        </div>
+        <div class="row">
+            <div class="one-half column">
+                <p>
+                    Reflection on a parabola
+                </p>
+            </div>
+            <div id="reflection_parabola" class="one-half column"></div>
         </div>
     </div>
 
@@ -73,5 +88,7 @@
     <script src="reflection_dome.js"></script>
     <script src="reflection_dish.js"></script>
     <script src="reflection_circle.js"></script>
+    <script src="parabola.js"></script>
 </body>
+
 </html>
