REFRACTION IS FLAWLESS

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="row">
             <div class="one-half column">
                 <p>
-                    Reflection on a parabola
+                    Refraction and total internal reflection
                 </p>
             </div>
             <div id="refraction_test" class="one-half column"></div>
