--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://d3js.org/d3-selection-multi.v1.min.js"></script>
     <script src="geometry.js"></script>
-    <script src="reflection_flat.js"></script>
-    <script src="reflection_dome.js"></script>
-    <script src="reflection_dish.js"></script>
-    <script src="reflection_circle.js"></script>
+    <!-- <script src="reflection_flat.js"></script> -->
+    <!-- <script src="reflection_dome.js"></script> -->
+    <!-- <script src="reflection_dish.js"></script> -->
+    <!-- <script src="reflection_circle.js"></script> -->
     <script src="parabola.js"></script>
-    <script src="refraction.js"></script>
+    <!-- <script src="refraction.js"></script> -->
 </body>
 
 </html>
