Added variable IOR sim

--- a/index.html
+++ b/index.html
@@ -86,17 +86,27 @@
             </div>
             <div id="refraction_test" class="one-half column"></div>
         </div>
+        <div class="row">
+            <div class="one-half column">
+                <p>
+                    Variable IOR
+                </p>
+            </div>
+            <div id="ior" class="one-half column"></div>
+        </div>
     </div>
 
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://d3js.org/d3-selection-multi.v1.min.js"></script>
     <script src="geometry.js"></script>
+    <script src="ui.js"></script>
     <script src="reflection_flat.js"></script>
     <script src="reflection_dome.js"></script>
     <script src="reflection_dish.js"></script>
     <script src="reflection_circle.js"></script>
     <script src="parabola.js"></script>
     <script src="refraction.js"></script>
+    <script src="ior.js"></script>
 </body>
 
 </html>
