Added environment manipulation Added lens sim

--- a/index.html
+++ b/index.html
@@ -94,6 +94,14 @@
             </div>
             <div id="ior" class="one-half column"></div>
         </div>
+        <div class="row">
+            <div class="one-half column">
+                <p>
+                    Focusing Lens
+                </p>
+            </div>
+            <div id="focus_lens" class="one-half column"></div>
+        </div>
     </div>
 
     <script src="https://d3js.org/d3.v5.min.js"></script>
@@ -107,6 +115,7 @@
     <script src="parabola.js"></script>
     <script src="refraction.js"></script>
     <script src="ior.js"></script>
+    <script src="focus_lens.js"></script>
 </body>
 
 </html>
