Added a bezier curve mirror sim

--- a/index.html
+++ b/index.html
@@ -102,6 +102,14 @@
             </div>
             <div id="focus_lens" class="one-half column"></div>
         </div>
+        <div class="row">
+            <div class="one-half column">
+                <p>
+                     Bezier Curve Mirror
+                </p>
+            </div>
+            <div id="bezier" class="one-half column"></div>
+        </div>
     </div>
 
     <script src="https://d3js.org/d3.v5.min.js"></script>
@@ -116,6 +124,7 @@
     <script src="refraction.js"></script>
     <script src="ior.js"></script>
     <script src="focus_lens.js"></script>
+    <script src="bezier.js"></script>
 </body>
 
 </html>
