Fixed an arc bug Tried adding a dark color scheme It didn't work Dark themes are difficult

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="normalize.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="skeleton.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="old.css" />
 </head>
 
 <body>
