Updates, no bamboozle

--- a/reflection.html
+++ b/reflection.html
@@ -17,15 +17,17 @@
         <div class="row">
             <div class="one-half column" style="margin-top: 10%">
                 <h3>Reflection</h3>
-                <p>When light hits a mirror, it reflects out at the same angle that it hit the mirror at. Try moving the light
-                    ray to see this --> </p>
+                <p>When light hits a mirror, 
+                    it reflects out at the same angle that it hit the mirror at. 
+                    This angle is measured off of the normal vector, which is perpendicular to the surface of the mirror.
+                    Try moving the light
+                    ray to the right to see reflection in action. </p>
 
                 <blockquote>
                     <h5>Law of Reflection</h5>
 
-                    The angle with which light hits the mirror (θ
-                    <sub>i</sub>) is the same as the angle it reflects out at (θ
-                    <sub>r</sub>).
+                    The angle with which light hits the mirror (θ<sub>i</sub>) 
+                    is the same as the angle it reflects out at (θ<sub>r</sub>).
 
                     <br/>
                     <br/>
@@ -38,6 +40,7 @@
         </div>
         <div class="row">
             <div class="one-half column">
+                <h3>Curved mirrors</h3>
                 <p>
                     Light hitting a curved mirror can get a bit more complicated. 
                     
@@ -92,11 +95,11 @@
     <script src="https://d3js.org/d3-selection-multi.v1.min.js"></script>
     <script src="geometry.js"></script>
     <script src="ui.js"></script>
-    <!-- <script src="reflection_flat.js"></script> -->
+    <script src="reflection_flat.js"></script>
     <script src="reflection_dome.js"></script>
-    <!-- <script src="reflection_dish.js"></script> -->
-    <!-- <script src="reflection_circle.js"></script> -->
-    <!-- <script src="parabola.js"></script> -->
+    <script src="reflection_dish.js"></script>
+    <script src="reflection_circle.js"></script>
+    <script src="parabola.js"></script>
     <!-- <script src="refraction.js"></script> -->
     <!-- <script src="ior.js"></script> -->
     <!-- <script src="focus_lens.js"></script> -->
