--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
 <body>
     <div class="container">
+<h3>
+    <a href="reflection.html">Reflection</a>
+</h3>
         <div class="row">
             <div class="one-half column" style="margin-top: 10%">
                 <h3>Reflection</h3>
