--- a/reflection.html
+++ b/reflection.html
@@ -17,17 +17,14 @@
         <div class="row">
             <div class="one-half column" style="margin-top: 10%">
                 <h3>Reflection</h3>
-                <p>When light hits a mirror, 
-                    it reflects out at the same angle that it hit the mirror at. 
-                    This angle is measured off of the normal vector, which is perpendicular to the surface of the mirror.
-                    Try moving the light
-                    ray to the right to see reflection in action. </p>
+                <p>When light hits a mirror, it reflects out at the same angle that it hit the mirror at. This angle is measured
+                    off of the normal vector, which is perpendicular to the surface of the mirror. Try moving the light ray
+                    to the right to see reflection in action. </p>
 
                 <blockquote>
                     <h5>Law of Reflection</h5>
 
-                    The angle with which light hits the mirror (θ<sub>i</sub>) 
-                    is the same as the angle it reflects out at (θ<sub>r</sub>).
+                    The angle with which light hits the mirror (θ<sub>i</sub>) is the same as the angle it reflects out at (θ<sub>r</sub>).
 
                     <br/>
                     <br/>
@@ -42,53 +39,107 @@
             <div class="one-half column">
                 <h3>Curved mirrors</h3>
                 <p>
-                    Light hitting a curved mirror can get a bit more complicated. 
-                    
+                    Light hitting a curved mirror can get a bit more complicated.
+
                 </p>
                 <p>
-                    When the rays hit a concave part of the mirror, it focuses the light onto a point.
-                    The rays also flip which side of the beam they're on. This is why when you look into 
-                    a spoon, your reflection is flipped. Try hovering over the rays to see this.
+                    When the rays hit a concave part of the mirror, it focuses the light onto a point. The rays also flip which side of the beam
+                    they're on. This is why when you look into a spoon, your reflection is flipped. Try hovering over the
+                    rays to see this.
                 </p>
                 <p>
-                    When the light hits a convex part of the mirror, it tends to spread out, and the rays don't flip. 
-                    This is why convex mirrors and more boring than concave mirrors.
+                    When the light hits a convex part of the mirror, it tends to spread out, and the rays don't flip. This is why convex mirrors
+                    and more boring than concave mirrors.
                 </p>
             </div>
             <div id="reflection_dome" class="one-half column"></div>
         </div>
         <div class="row">
             <div class="one-half column">
+                <h3> More curved mirrors </h3>
                 <p>
-                    Reflection on a half sphere
+                    Here's another curved mirror to play with. This one's been modified to not be perfectly reflective. Instead, it only reflects
+                    <b id="percent-reflectance">50%</b> of the light that hits it. It lets another
+                    <b id="percent-transmission">10%</b> through, and the absorbs the other
+                    <b id="percent-absorbance">40%</b>. The absorbed light gets turned into heat, which can melt mirrors.
+                </p>
+                <p>
+                    Real mirrors tend to have reflectances within 80% - 99%.
+                </p>
+            </div>
+            <div id="bezier" class="one-half column"></div>
+        </div>
+        <div class="row">
+            <div class="one-half column">
+                <h3>Focusing Light</h3>
+                <p>
+                    Since curved mirrors focus light, you could use a half circle to focus a beam onto a point.
+                </p>
+                <p>
+                    But, as you can see to the right, not all of the light is focused. Most rays just bounce out of the circle entirely. The
+                    rays that do hit the focus don't focus into a point, but rather into a heart like shape (cardioid).
+                </p>
+                <p>
+                    The fact that a circle doesn't perfectly focus light is called spherical abberation. It can be minimized by only using the
+                    bottom part of the circle. You can try that by bringing the beam down very low over the bottom of the
+                    sphere.
                 </p>
             </div>
             <div id="reflection_dish" class="one-half column"></div>
         </div>
         <div class="row">
             <div class="one-half column">
+                <h3>The Parabola</h3>
                 <p>
-                    Reflection in a circle
+                    The parabola is another choice for focusing light. It focuses light far better than the circle. In fact, it can be mathematically
+                    proven that every light ray coming down vertically onto a parabola will all be reflected towards the
+                    same point, the parabola's focal point.
                 </p>
-            </div>
-            <div id="reflection_circle" class="one-half column"></div>
-        </div>
-        <div class="row">
-            <div class="one-half column">
                 <p>
-                    Reflection on a parabola
+                    See how the parabola focuses light by trying out the vertical beam (left).
+                </p>
+                <p>
+                    Then, try the cone lamp (right) and position it at the focal point. If you get it close enough, the lamp's rays should all
+                    be reflected to form a vertical beam.
+                </p>
+                <p>
+                    You can take that beam, and focus it back down with another parabola. You can try that below. I've limited the number of
+                    times each light ray can get reflected, just so things don't get to messy.
                 </p>
             </div>
             <div id="reflection_parabola" class="one-half column"></div>
         </div>
         <div class="row">
+            <div id="beaming_parabola"></div>
+        </div>
+        <div class="row">
             <div class="one-half column">
+                <h3>Satellite Dishes</h3>
                 <p>
-                    Bezier Curve Mirror
+                    The simulation above shows how satellite dishes work. Satellite dishes are 3D parabolas, which are called parabaloids. They're
+                    typically flatter that what you see above.
+                </p>
+                <p>
+                    That piece at the end of the rod is the transceiver. It can emit and detect radio waves, which is lower frequency light that
+                    we humans can't see naturally.
+                </p>
+                <p>
+                    The transceiver positioned at the parabola's focal point. When the two dishes are pointed at each other, any light from one
+                    of them will be focused into a beam that hits the other dish, where it gets focused onto the receiver.
                 </p>
             </div>
-            <div id="bezier" class="one-half column"></div>
+            <div class="one-half column">
+                <img src="dish.jpg">
+            </div>
         </div>
+        <!-- <div class="row">
+            <div class="one-half column">
+                <p>
+                    Reflection in a circle
+                </p>
+            </div>
+            <div id="reflection_circle" class="one-half column"></div>
+        </div> -->
     </div>
 
     <script src="https://d3js.org/d3.v5.min.js"></script>
@@ -98,12 +149,13 @@
     <script src="reflection_flat.js"></script>
     <script src="reflection_dome.js"></script>
     <script src="reflection_dish.js"></script>
-    <script src="reflection_circle.js"></script>
+    <!-- <script src="reflection_circle.js"></script> -->
     <script src="parabola.js"></script>
+    <script src="parabola2.js"></script>
     <!-- <script src="refraction.js"></script> -->
     <!-- <script src="ior.js"></script> -->
     <!-- <script src="focus_lens.js"></script> -->
-    <!-- <script src="bezier.js"></script> -->
+    <script src="bezier.js"></script>
 </body>
 
 </html>
