Made highlights more subtle Fixed bezier heat bug

--- a/reflection.html
+++ b/reflection.html
@@ -58,7 +58,10 @@
             <div class="one-half column">
                 <h3> More curved mirrors </h3>
                 <p>
-                    Here's another curved mirror to play with. This one's been modified to not be perfectly reflective. Instead, it only reflects
+                    Here's another curved mirror to play with. This one's been modified to not be perfectly reflective. 
+                </p>
+                <p>
+                    Instead, it only reflects
                     <b id="percent-reflectance">50%</b> of the light that hits it. It lets another
                     <b id="percent-transmission">10%</b> through, and the absorbs the other
                     <b id="percent-absorbance">40%</b>. The absorbed light gets turned into heat, which can melt mirrors.
@@ -77,12 +80,12 @@
                 </p>
                 <p>
                     But, as you can see to the right, not all of the light is focused. Most rays just bounce out of the circle entirely. The
-                    rays that do hit the focus don't focus into a point, but rather into a heart like shape (cardioid).
+                    rays that do hit the focus don't focus into a point, but rather into a heart like shape (cardioid). This is more visible 
+                    when the radius of the circle is smaller.
                 </p>
                 <p>
-                    The fact that a circle doesn't perfectly focus light is called spherical abberation. It can be minimized by only using the
-                    bottom part of the circle. You can try that by bringing the beam down very low over the bottom of the
-                    sphere.
+                    The fact that a circle doesn't perfectly focus light is called <b>spherical aberration</b>. It can be minimized by only using the
+                    bottom part of the circle. 
                 </p>
             </div>
             <div id="reflection_dish" class="one-half column"></div>
@@ -132,14 +135,15 @@
                 <img src="dish.jpg">
             </div>
         </div>
-        <!-- <div class="row">
+        <div class="row">
             <div class="one-half column">
+                <h3>Circles!</h3>
                 <p>
-                    Reflection in a circle
+                    Now, try playing around with light rays inside a circular mirror. It makes pretty patterns.
                 </p>
             </div>
             <div id="reflection_circle" class="one-half column"></div>
-        </div> -->
+        </div>
     </div>
 
     <script src="https://d3js.org/d3.v5.min.js"></script>
@@ -149,7 +153,7 @@
     <script src="reflection_flat.js"></script>
     <script src="reflection_dome.js"></script>
     <script src="reflection_dish.js"></script>
-    <!-- <script src="reflection_circle.js"></script> -->
+    <script src="reflection_circle.js"></script>
     <script src="parabola.js"></script>
     <script src="parabola2.js"></script>
     <!-- <script src="refraction.js"></script> -->
