--- a/index.html
+++ b/index.html
@@ -9,109 +9,43 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="normalize.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="skeleton.css" />
+    <!-- <link rel="stylesheet" type="text/css" media="screen" href="balloon.css" /> -->
     <link rel="stylesheet" type="text/css" media="screen" href="old.css" />
 </head>
 
 <body>
     <div class="container">
-<h3>
-    <a href="reflection.html">Reflection</a>
-</h3>
-        <div class="row">
-            <div class="one-half column" style="margin-top: 10%">
-                <h3>Reflection</h3>
-                <p>When light hits a mirror, it reflects out at the same angle that it hit the mirror at. Try moving the light
-                    ray to see this --> </p>
-
-                <blockquote>
-                    <h5>Law of Reflection</h5>
-
-                    The angle with which light hits the mirror (θ
-                    <sub>i</sub>) is the same as the angle it reflects out at (θ
-                    <sub>r</sub>).
-
-                    <br/>
-                    <br/>
-                    <h6> θ
-                        <sub>i</sub> = θ
-                        <sub>r</sub>
-                    </h6>
-
-                </blockquote>
-                <p>
-                    Next:
-                    <ul>
-                        <li>Reflection on a curved surface (dome)</li>
-                        <li>Reflection on concave mirrors (different options)</li>
-                    </ul>
-
-                </p>
+<!-- Navbar based on http://css-snippets.com/simple-horizontal-navigation/ -->
+        <header>
+            <div class="nav">
+                <ul>
+                    <li><a href="#">Optics</a></li>
+                    <li><a href="reflection.html">Reflection</a></li>
+                    <li><a href="refraction.html">Refraction</a></li>
+                </ul>
             </div>
-            <div id="reflection_flat" class="one-half column" style="margin-top: 10%;"></div>
-        </div>
+        </header>
         <div class="row">
             <div class="one-half column">
+                <h3>Optics!</h3>
                 <p>
-                    Reflection on a curved surface
+                    Optics is the physics of light. 
+                    It describes, alongside other phenomena,
+                     how light can be reflected by mirrors, and bent (refracted) by materials like
+                    glass or water.
                 </p>
-            </div>
-            <div id="reflection_dome" class="one-half column"></div>
-        </div>
-        <div class="row">
-            <div class="one-half column">
                 <p>
-                    Reflection on a half sphere
+                    This site tries to explain some of the various aspect of optics, and each explanation is accompanied by a simulation. All
+                    of the simulations are interactive. Try playing with the one to the right, which has a laser beam, glass,
+                    and water.
                 </p>
-            </div>
-            <div id="reflection_dish" class="one-half column"></div>
-        </div>
-        <div class="row">
-            <div class="one-half column">
                 <p>
-                    Reflection in a circle
-                </p>
-            </div>
-            <div id="reflection_circle" class="one-half column"></div>
-        </div>
-        <div class="row">
-            <div class="one-half column">
-                <p>
-                    Reflection on a parabola
-                </p>
-            </div>
-            <div id="reflection_parabola" class="one-half column"></div>
-        </div>
-        <div class="row">
-            <div class="one-half column">
-                <p>
-                    Refraction and total internal reflection
+                    After that, you can move on to
+                    <a href="reflection.html">reflection,</a>
+                    or skip straight ahead to a different topic in the navbar above.
                 </p>
             </div>
             <div id="refraction_test" class="one-half column"></div>
-        </div>
-        <div class="row">
-            <div class="one-half column">
-                <p>
-                    Variable IOR
-                </p>
-            </div>
-            <div id="ior" class="one-half column"></div>
-        </div>
-        <div class="row">
-            <div class="one-half column">
-                <p>
-                    Focusing Lens
-                </p>
-            </div>
-            <div id="focus_lens" class="one-half column"></div>
-        </div>
-        <div class="row">
-            <div class="one-half column">
-                <p>
-                     Bezier Curve Mirror
-                </p>
-            </div>
-            <div id="bezier" class="one-half column"></div>
         </div>
     </div>
 
@@ -119,15 +53,7 @@
     <script src="https://d3js.org/d3-selection-multi.v1.min.js"></script>
     <script src="geometry.js"></script>
     <script src="ui.js"></script>
-    <script src="reflection_flat.js"></script>
-    <script src="reflection_dome.js"></script>
-    <script src="reflection_dish.js"></script>
-    <script src="reflection_circle.js"></script>
-    <script src="parabola.js"></script>
     <script src="refraction.js"></script>
-    <script src="ior.js"></script>
-    <script src="focus_lens.js"></script>
-    <script src="bezier.js"></script>
 </body>
 
 </html>
