--- a/reflection.html
+++ b/reflection.html
@@ -15,8 +15,24 @@
 
 <body>
     <div class="container">
+        <div class="row navbar">
+            <!-- <div class="column one"></div> -->
+            <div class="columns two">
+                <h2>Optics</h2>
+            </div>
+            <div class="columns two">
+                <h5 class="navbar">
+                    <a class="navbar" href="reflection.html">Reflection</a>
+                </h5>
+            </div>
+            <div class="columns two">
+                <h5 class="navbar">
+                    <a class="navbar" href="refraction.html">Refraction</a>
+                </h5>
+            </div>
+        </div>
         <div class="row">
-            <div class="one-half column" style="margin-top: 10%">
+            <div class="one-half column">
                 <h3>Reflection</h3>
                 <p>When light hits a mirror, it reflects out at the same angle that it hit the mirror at. This angle is measured
                     off of the normal vector, which is perpendicular to the surface of the mirror. Try moving the light ray
@@ -34,7 +50,7 @@
 
                 </blockquote>
             </div>
-            <div id="reflection_flat" class="one-half column" style="margin-top: 10%;"></div>
+            <div id="reflection_flat" class="one-half column"></div>
         </div>
         <div class="row">
             <div class="one-half column">
@@ -59,7 +75,7 @@
             <div class="one-half column">
                 <h3> More curved mirrors </h3>
                 <p>
-                    Here's another curved mirror to play with. This one's been modified to not be perfectly reflective. 
+                    Here's another curved mirror to play with. This one's been modified to not be perfectly reflective.
                 </p>
                 <p>
                     Instead, it only reflects
@@ -81,12 +97,12 @@
                 </p>
                 <p>
                     But, as you can see to the right, not all of the light is focused. Most rays just bounce out of the circle entirely. The
-                    rays that do hit the focus don't focus into a point, but rather into a heart like shape (cardioid). This is more visible 
-                    when the radius of the circle is smaller.
+                    rays that do hit the focus don't focus into a point, but rather into a heart like shape (cardioid). This
+                    is more visible when the radius of the circle is smaller.
                 </p>
                 <p>
-                    The fact that a circle doesn't perfectly focus light is called <b>spherical aberration</b>. It can be minimized by only using the
-                    bottom part of the circle. 
+                    The fact that a circle doesn't perfectly focus light is called
+                    <b>spherical aberration</b>. It can be minimized by only using the bottom part of the circle.
                 </p>
             </div>
             <div id="reflection_dish" class="one-half column"></div>
@@ -95,51 +111,54 @@
             <div class="one-half column">
                 <h3>The Parabola</h3>
                 <p>
-                    The parabola is another choice for focusing light, and as you will see, it focuses light far better than the circle. <!--In fact, it can be mathematically
+                    The parabola is another choice for focusing light, and as you will see, it focuses light far better than the circle.
+                    <!--In fact, it can be mathematically
                     proven that every light ray coming down vertically onto a parabola will all be reflected towards the
- same point, the parabola's focal point.--> 
-<!-- <sup class="footnote" data-balloon="Here's a great video that proves that, if you want" data-balloon-length="medium" data-balloon-pos="up">
+ same point, the parabola's focal point.-->
+                    <!-- <sup class="footnote" data-balloon="Here's a great video that proves that, if you want" data-balloon-length="medium" data-balloon-pos="up">
     <a href="https://www.youtube.com/watch?v=owVwjr6pTqc">[1]</a>
 </sup> -->
                 </p>
                 <p>
-                    You can see how the parabola focuses light by trying out the vertical beam (left). The light rays will all focus
-                    onto the parabolas focal point. You can change how far away that point is with the slider below. 
+                    You can see how the parabola focuses light by trying out the vertical beam (left). The light rays will all focus onto the
+                    parabolas focal point. You can change how far away that point is with the slider below.
                 </p>
                 <p>
- Then, try the cone lamp (right) and position it at the focal point. If you get it close enough, the lamp's rays should all
-be reflected to form a vertical beam.
+                    Then, try the cone lamp (right) and position it at the focal point. If you get it close enough, the lamp's rays should all
+                    be reflected to form a vertical beam.
                 </p>
                 <p>
                     <!-- You can take that beam, and focus it back down with another parabola. You can try that below. I've limited the number of
                     times each light ray can get reflected, just so things don't get to messy. -->
-                    Below, you can try using this property to focus light from one parabola onto another. 
- I've limited the number of times each light ray can get reflected, just so things don't get to messy.
+                    Below, you can try using this property to focus light from one parabola onto another. I've limited the number of times each
+                    light ray can get reflected, just so things don't get to messy.
                 </p>
             </div>
             <div id="reflection_parabola" class="one-half column"></div>
         </div>
         <div class="row">
-            <div id="beaming_parabola"></div>
-        </div>
-        <div class="row">
+            
             <div class="one-half column">
                 <h3>Satellite Dishes</h3>
                 <p>
                     The simulation above shows how satellite dishes work. Satellite dishes are 3D parabolas, which are called parabaloids.
                 </p>
                 <p>
-                    That piece at the end of the rod is the transceiver. It can emit and detect radio waves, which are a kind of light that
-                    we humans can't see naturally.
+                    Every satellite dish has a rod that sticks out from it. 
+                    At the end of the rod is the transceiver. 
+                    It can emit and detect radio waves, which are a kind of light that we
+                    humans can't see naturally.
                 </p>
                 <p>
-                    The transceiver positioned at the parabola's focal point. When two dishes are pointed at each other, any light from one
-                    of them will be focused into a beam that hits the other dish, where it gets focused onto the receiver.
+                    The rod is used to position the transceiver at the parabola's focal point, so it can easily pick up all incoming light. 
+                    When two dishes are pointed at each other, any light from one of
+                    them will be focused into a beam that hits the other dish, where it gets focused onto the other's receiver.
                 </p>
             </div>
-            <div class="one-half column">
+            <div class="one-half column" id="beaming_parabola"></div>    
+            <!-- <div class="one-half column">
                 <img src="dish.jpg">
-            </div>
+            </div> -->
         </div>
         <div class="row">
             <div class="one-half column">
